fix issues from sonar cloud